Experiments MinCutBES